Set z-index on .header to prevent overlaps with the menu

--- a/.dev/assets/shared/css/header/header.css
+++ b/.dev/assets/shared/css/header/header.css
@@ -1,6 +1,7 @@
 /*! Header */
 .header {
 	background-color: hsl(var(--theme-header--bg));
+	z-index: 2;
 
 	& .u-informational {
 		display: inline-block;
